plugins {
    id 'java'
    id 'org.ajoberstar.grgit' apply false
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven { url 'https://maven.aliyun.com/repository/public' }
}

apply from: "gradle/version.gradle"
apply from: "gradle/reversion.gradle"
apply from: "gradle/check.gradle"
apply from: "gradle/publication.gradle"

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation("javax.validation:validation-api:${validationApiVersion}")
    implementation("com.google.guava:guava:${guavaVersion}")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testImplementation("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
    testImplementation("org.hamcrest:hamcrest-all:${hamcrestVersion}")
}
